fix image cropping caused by automatic resizing due to the padding.

--- a/src/index.css
+++ b/src/index.css
@@ -45,7 +45,6 @@ body {
 
 .picture-card {
   cursor: pointer;
-  padding: 1rem;
   margin: 0.5rem;
   border-radius: 0.5rem;
 
